SERVER-27644 $unwind arrays when performing distinct on a view