src/mongo/db/query/parsed_distinct_test.cpp
@@ -66,11 +66,16 @@ TEST(ParsedDistinctTest, ConvertToAggregationNoQuery) {
     ASSERT_BSONOBJ_EQ(ar.getValue().getCollation(), BSONObj());
 
     std::vector<BSONObj> expectedPipeline{
+        BSON("$unwind" << BSON("path"
+                               << "$x"
+                               << "preserveNullAndEmptyArrays"
+                               << true)),
         BSON("$group" << BSON("_id" << BSONNULL << "distinct" << BSON("$addToSet"
                                                                       << "$x")))};
     ASSERT(std::equal(expectedPipeline.begin(),
                       expectedPipeline.end(),
                       ar.getValue().getPipeline().begin(),
+                      ar.getValue().getPipeline().end(),
                       SimpleBSONObjComparator::kInstance.makeEqualTo()));
 }
 
@@ -98,11 +103,16 @@ TEST(ParsedDistinctTest, ConvertToAggregationWithQuery) {
 
     std::vector<BSONObj> expectedPipeline{
         BSON("$match" << BSON("z" << 7)),
+        BSON("$unwind" << BSON("path"
+                               << "$y"
+                               << "preserveNullAndEmptyArrays"
+                               << true)),
         BSON("$group" << BSON("_id" << BSONNULL << "distinct" << BSON("$addToSet"
                                                                       << "$y")))};
     ASSERT(std::equal(expectedPipeline.begin(),
                       expectedPipeline.end(),
                       ar.getValue().getPipeline().begin(),
+                      ar.getValue().getPipeline().end(),
                       SimpleBSONObjComparator::kInstance.makeEqualTo()));
 }
 
@@ -128,11 +138,16 @@ TEST(ParsedDistinctTest, ConvertToAggregationWithExplain) {
     ASSERT_BSONOBJ_EQ(ar.getValue().getCollation(), BSONObj());
 
     std::vector<BSONObj> expectedPipeline{
+        BSON("$unwind" << BSON("path"
+                               << "$x"
+                               << "preserveNullAndEmptyArrays"
+                               << true)),
         BSON("$group" << BSON("_id" << BSONNULL << "distinct" << BSON("$addToSet"
                                                                       << "$x")))};
     ASSERT(std::equal(expectedPipeline.begin(),
                       expectedPipeline.end(),
                       ar.getValue().getPipeline().begin(),
+                      ar.getValue().getPipeline().end(),
                       SimpleBSONObjComparator::kInstance.makeEqualTo()));
 }
 
